objects/DAZNUserFeed__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>User_Feed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Active Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Placeholder field to identify user account type. Nothing to be done on this field. Ignored by the processor</description>
        <label>Account Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Key__c</fullName>
        <label>Auth Key</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillingCountryCode__c</fullName>
        <label>BillingCountryCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityNickname__c</fullName>
        <description>Nickname needed for salesforce</description>
        <label>CommunityNickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAZN_Id__c</fullName>
        <description>Unique Identifier created by Massive to identify the user</description>
        <label>DAZN Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <label>EmailEncodingKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UTF-8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Preferences__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marketing preferences as entered by user during sign up, for Docomo users this is always set to TRUE.</description>
        <label>Email Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email of the customer. For partner users like Docomo, this email will be &lt;partner Id&gt;@dazn.com.
For default DAZN subscribers, it will be the email they have used to sign up.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the user if the user has completed sign up to DAZN                                                                                                                                                                                                                                                                                                                                        , empty otherwise.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_address__c</fullName>
        <label>IP address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Password_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Password Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>LanguageLocaleKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>LocaleSidKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ja_JP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Num Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <externalId>true</externalId>
        <label>Partner Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Registration_status__c</fullName>
        <label>Partner Registration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>Email to be used for notifying the customer about information related to their DAZN account. For default DAZN subscribers, this will be the same as Email field. 
For Docomo users, this will be the email they filled in during sign up to DAZN.</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>To be retried</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Portal user id of the account created</description>
        <inlineHelpText>Portal user id of the account created</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Feed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Docomo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ViewerId__c</fullName>
        <label>ViewerId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DAZN User Feed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>createdbyMassive</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Massive User</value>
        </filters>
        <label>createdbyMassive</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>DFD-{0000}</displayFormat>
        <label>User feed Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN User Feed</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>